--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,7 @@
 /assets/hut.blend2
 /assets/tower.blend1
 /assets/tower.blend2
+/assets/barbedwire.blend1
+/assets/barbedwire.blend2
+/assets/wall1.blend1
+/assets/wall1.blend2
