--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-*.class
+﻿*.class
 
 # Package Files #
 *.jar
@@ -24,6 +24,4 @@
 /assets/food.blend2
 /assets/guardhouse.blend1
 /assets/guardhouse.blend2
-/assets/guardhouse2.blend1
-/assets/guardhouse2.blend2
 /assets/guard.blend1
